# mqtt-serial-router

./: .gitignore  CMakeLists.txt  README.markdown  cmd.c  description-pak  mqtt.c  router.c  serial.c
deb/: mosquitto.service  mqtt-serial-router.service  mqtt-serial-router@.service  postinst  postrm  prerm
